Alteração da imagem de exemplo. Ajustes de layout no login.

--- a/WebContent/faces/sobre.xhtml
+++ b/WebContent/faces/sobre.xhtml
@@ -18,7 +18,7 @@
 								<ul class="thumbnails">
 									<li class="span6">
 										<a href="#" class="thumbnail">
-											<img class="media-object" src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+											<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 										</a>
 									</li>
 									<li class="span6">
@@ -28,7 +28,7 @@
 								<ul class="thumbnails">
 									<li class="span6">
 										<a href="#" class="thumbnail">
-											<img class="media-object" src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+											<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 										</a>
 									</li>
 									<li class="span6">
@@ -38,7 +38,7 @@
 								<ul class="thumbnails">
 									<li class="span6">
 										<a href="#" class="thumbnail">
-											<img class="media-object" src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+											<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 										</a>
 									</li>
 									<li class="span6">
@@ -48,7 +48,7 @@
 								<ul class="thumbnails">
 									<li class="span6">
 										<a href="#" class="thumbnail">
-											<img class="media-object" src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+											<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 										</a>
 									</li>
 									<li class="span6">
@@ -58,8 +58,8 @@
 							</div>
 							<div class="span8">
 								<div class="media">
-									<a href="#" class="pull-left"> <img class="media-object"
-										src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+									<a href="#" class="pull-left">
+										<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 									</a>
 									<div class="media-body">
 										<h4 class="media-heading">Media heading</h4>
@@ -71,8 +71,8 @@
 									</div>
 								</div>
 								<div class="media">
-									<a href="#" class="pull-left"> <img class="media-object"
-										src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+									<a href="#" class="pull-left">
+										<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 									</a>
 									<div class="media-body">
 										<h4 class="media-heading">Media heading</h4>
@@ -82,8 +82,8 @@
 										condimentum nunc ac nisi vulputate fringilla. Donec lacinia
 										congue felis in faucibus.
 										<div class="media">
-											<a href="#" class="pull-left"> <img class="media-object"
-												src="http://www.santocafe.com.br/site/produtos/restaurante/mycoffeedigi.png"></img>
+											<a href="#" class="pull-left">
+												<img alt="" src="#{facesContext.externalContext.requestContextPath}/framework/img/default.png"></img>
 											</a>
 											<div class="media-body">
 												<h4 class="media-heading">Media heading</h4>
