Ajustes para o menu ativo.

--- a/WebContent/faces/contato.xhtml
+++ b/WebContent/faces/contato.xhtml
@@ -10,7 +10,7 @@
 	<f:view>
 		<ui:composition template="/templates/default/default.xhtml">
 			<ui:define name="content">
-				<div class="container content-top">
+				<div id="contato" class="container content-top">
 					<h:form id="contatoForm" class="form-horizontal">
 						<div class="control-group">
 							<label class="control-label" for="inputNome">Nome:</label>
