--- a/WebContent/faces/sobre.xhtml
+++ b/WebContent/faces/sobre.xhtml
@@ -10,7 +10,7 @@
 	<f:view>
 		<ui:composition template="/templates/default/default.xhtml">
 			<ui:define name="content">
-				<div class="container content-top">
+				<div id="sobre" class="container content-top">
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<div class="span4">
