--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <h:body>
 	<f:view>
@@ -13,51 +14,30 @@
 				<div id="home">
 					<div class="carousel slide" id="myCarousel">
 						<div class="carousel-inner">
-							<div class="item active">
-								<img alt=""
-									src="#{facesContext.externalContext.requestContextPath}/framework/img/bootstrap-mdo-sfmoma-01.jpg"></img>
-								<div class="container">
-									<div class="carousel-caption">
-										<h1>Example headline.</h1>
-										<p class="lead">Cras justo odio, dapibus ac facilisis in,
-											egestas eget quam. Donec id elit non mi porta gravida at eget
-											metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-										<a href="#" class="btn btn-large btn-primary">Sign up
-											today</a>
+						    <c:forEach varStatus="idBanner"  items="#{home.banners}" var="banner">
+							    <c:choose>
+								    <c:when test="#{idBanner.first == true}">
+								    	<c:set var="activeBanner" value="active"/>
+								    </c:when>	
+								    <c:otherwise><c:set var="activeBanner"  value=" "/></c:otherwise>
+								</c:choose>	    	
+								<div class="item #{activeBanner}">
+									<img alt=""
+										src="#{facesContext.externalContext.requestContextPath}/framework/img/bootstrap-mdo-sfmoma-01.jpg"></img>
+									<div class="container">
+										<div class="carousel-caption">
+   											<h1><h:outputText value="#{banner.titulo}"/></h1>
+											<p class="lead"><h:outputText value="#{banner.descricao}"/></p>
+											<a href="#" class="btn btn-large btn-primary"><h:outputText value="#{banner.link}"/></a>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="item">
-								<img alt=""
-									src="#{facesContext.externalContext.requestContextPath}/framework/img/bootstrap-mdo-sfmoma-01.jpg"></img>
-								<div class="container">
-									<div class="carousel-caption">
-										<h1>Another example headline.</h1>
-										<p class="lead">Cras justo odio, dapibus ac facilisis in,
-											egestas eget quam. Donec id elit non mi porta gravida at eget
-											metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-										<a href="#" class="btn btn-large btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<img alt=""
-									src="#{facesContext.externalContext.requestContextPath}/framework/img/bootstrap-mdo-sfmoma-01.jpg"></img>
-								<div class="container">
-									<div class="carousel-caption">
-										<h1>One more for good measure.</h1>
-										<p class="lead">Cras justo odio, dapibus ac facilisis in,
-											egestas eget quam. Donec id elit non mi porta gravida at eget
-											metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-										<a href="#" class="btn btn-large btn-primary">Browse
-											gallery</a>
-									</div>
-								</div>
-							</div>
+						 	</c:forEach>  
 						</div>
 						<a data-slide="prev" href="#myCarousel"
-							class="left carousel-control">‹</a> <a data-slide="next"
-							href="#myCarousel" class="right carousel-control">›</a>
+							class="left carousel-control">‹</a>
+						<a data-slide="next" href="#myCarousel" 
+							class="right carousel-control">›</a>
 					</div>
 					<div class="container">
 						<div class="row">
