Implementação dos messages da página de contato.

--- a/WebContent/faces/contato.xhtml
+++ b/WebContent/faces/contato.xhtml
@@ -11,34 +11,39 @@
 		<ui:composition template="/templates/default/default.xhtml">
 			<ui:define name="content">
 				<f:loadBundle basename="resources.contato" var="contato_props" />
-				<div class="container">
+				<div class="container">	
 					<div id="contato" class="row-fluid content-top">
 						<div class="span7">
 							<h:form id="contatoForm" class="form-horizontal">
 								<div class="control-group">
-									<label class="control-label" for="inputNome">#{contato_props.nome}</label>
+									<h:outputLabel styleClass="control-label" for="inputNome" value="#{contato_props.nome}"></h:outputLabel>
 									<div class="controls">
-										<input type="text" id="inputNome" placeholder="Nome" class="span10"></input>
+										<h:inputText id="inputNome" styleClass="span10" value="#{contato.form.nome}" required="true" requiredMessage="Este campo é obrigatório."></h:inputText>
+										<h:message for="inputNome" errorClass="row alert-error"></h:message>
 									</div>
 								</div>
 								<div class="control-group">
-									<label class="control-label" for="inputEmail">#{contato_props.email}</label>
+									<h:outputLabel styleClass="control-label" for="inputEmail" value="#{contato_props.email}"></h:outputLabel>
 									<div class="controls">
-										<input type="text" id="inputEmail" placeholder="E-mail"  class="span10"></input>
+										<h:inputText id="inputEmail" styleClass="span10" value="#{contato.form.email}" required="true" requiredMessage="Este campo é obrigatório."></h:inputText>
+										<h:message for="inputEmail" errorClass="row alert-error"></h:message>
 									</div>
 								</div>
 								<div class="control-group">
-									<label class="control-label" for="inputMsg">#{contato_props.mensagem}</label>
+									<h:outputLabel styleClass="control-label" for="inputMsg" value="#{contato_props.mensagem}"></h:outputLabel>
 									<div class="controls">
-										<textarea id="inputMsg" placeholder="Mensagem" rows="3" class="span10"></textarea>
+									<h:inputTextarea id="inputMsg" rows="3" styleClass="span10" value="#{contato.form.mensagem}" required="true" requiredMessage="Este campo é obrigatório."></h:inputTextarea>
+									<h:message for="inputMsg" errorClass="row alert-error"></h:message>
 									</div>
 								</div>
 								<div class="control-group">
 									<div class="controls">
-										<button type="submit" class="btn">#{contato_props['botao.enviar']}</button>
-										<button type="button" class="btn">#{contato_props['botao.cancelar']}</button>
+										<h:commandButton action="#{contato.enviarMensagem}" styleClass="btn" value="#{contato_props['botao.enviar']}"></h:commandButton>
+										&nbsp;
+										<h:button styleClass="btn" value="#{contato_props['botao.cancelar']}"></h:button>
 									</div>
 								</div>
+								<h:messages></h:messages>
 							</h:form>
 						</div>
 						<div class="span5">
