Implementação do controller do FacesMessages.

--- a/WebContent/faces/contato.xhtml
+++ b/WebContent/faces/contato.xhtml
@@ -43,7 +43,7 @@
 										<h:button styleClass="btn" value="#{contato_props['botao.cancelar']}"></h:button>
 									</div>
 								</div>
-								<h:messages></h:messages>
+								<h:messages infoClass="alert-success"></h:messages>
 							</h:form>
 						</div>
 						<div class="span5">
