--- a/WebContent/faces/login/login.xhtml
+++ b/WebContent/faces/login/login.xhtml
@@ -13,7 +13,7 @@
 				<div class="container content-top">
 					<h:form id="signin" class="form-signin">
 						<h3 class="form-signin-heading">Login</h3>
-						<h:messages errorClass="alert-error"></h:messages>
+						<h:messages warnClass="alert" errorClass="alert-error"></h:messages>
 						<h:inputText id="nome" class="input-block-level" value="#{login.nome}" required="true" requiredMessage="O nome deve ser preenchido."></h:inputText>
 						<h:inputText id="passwd" class="input-block-level" value="#{login.senha}" required="true" requiredMessage="A senha deve ser preenchido."></h:inputText>
 						<br class="clearBoth"/>
@@ -23,7 +23,6 @@
 						 </div>
 					</h:form>
 				</div>
-				
 			</ui:define>
 		</ui:composition>
 	</f:view>
