Ajustes na funcionalidade de login.

--- a/WebContent/faces/login/login.xhtml
+++ b/WebContent/faces/login/login.xhtml
@@ -14,12 +14,12 @@
 					<h:form id="signin" class="form-signin">
 						<h3 class="form-signin-heading">Login</h3>
 						<h:messages warnClass="alert" errorClass="alert-error"></h:messages>
-						<h:inputText id="nome" class="input-block-level" value="#{login.nome}" required="true" requiredMessage="O nome deve ser preenchido."></h:inputText>
-						<h:inputText id="passwd" class="input-block-level" value="#{login.senha}" required="true" requiredMessage="A senha deve ser preenchido."></h:inputText>
+						<h:inputText id="nome" class="input-block-level" value="#{loginController.login.nome}" required="true" requiredMessage="O nome deve ser preenchido."></h:inputText>
+						<h:inputText id="passwd" class="input-block-level" value="#{loginController.login.senha}" required="true" requiredMessage="A senha deve ser preenchido."></h:inputText>
 						<br class="clearBoth"/>
 						<div class="space-button">
 							<h:commandButton class="btn btn-primary" type="submit" value="Entrar"
-							 action="#{login.realizarLogin}" ></h:commandButton>
+							 action="#{loginController.realizarLogin}" ></h:commandButton>
 						 </div>
 					</h:form>
 				</div>
