Ajustes nas mensagens de status.

--- a/WebContent/faces/usuarios/cadastro.xhtml
+++ b/WebContent/faces/usuarios/cadastro.xhtml
@@ -18,7 +18,9 @@
 							<div class="controls">
 								<h:inputText id="nomeID" value="#{usuarioController.formUser.nome}"
 									required="true" requiredMessage="Este campo deve ser preenchido."></h:inputText>
-								&nbsp;<h:message for="nomeID" errorClass="alert-error"></h:message>
+							</div>
+							<div class="controls">
+								<h:message for="nomeID" errorClass="alert-error"></h:message>
 							</div>
 						</div>
 						<div class="control-group">
@@ -26,7 +28,9 @@
 							<div class="controls">
 								<h:inputText id="senhaID" value="#{usuarioController.formUser.senha}"
 									required="true" requiredMessage="Este campo deve ser preenchido."></h:inputText>
-									&nbsp;<h:message for="senhaID" errorClass="alert-error"></h:message>
+							</div>
+							<div class="controls">
+								<h:message for="senhaID" errorClass="alert-error"></h:message>
 							</div>
 						</div>
 						<div class="control-group">
@@ -34,7 +38,9 @@
 							<div class="controls">
 								<h:inputText id="confSenhaID" value="#{usuarioController.formUser.senha}"
 									required="true" requiredMessage="Este campo deve ser preenchido."></h:inputText>
-									&nbsp;<h:message for="confSenhaID" errorClass="alert-error"></h:message>
+							</div>
+							<div class="controls">
+								<h:message for="confSenhaID" errorClass="alert-error"></h:message>
 							</div>
 						</div>
 						<div class="control-group">
@@ -42,7 +48,9 @@
 							<div class="controls">
 								<h:inputText id="emailID" value="#{usuarioController.formUser.email}"
 									required="true" requiredMessage="Este campo deve ser preenchido."></h:inputText>
-									&nbsp;<h:message for="emailID" errorClass="alert-error"></h:message>
+							</div>
+							<div class="controls">
+								<h:message for="emailID" errorClass="alert-error"></h:message>
 							</div>
 						</div>
 						<div class="control-group">
@@ -53,7 +61,9 @@
 									<f:selectItem itemLabel="Administrador" itemValue="ADMIN"></f:selectItem>
 									<f:selectItem itemLabel="Usuário" itemValue="USER"></f:selectItem>
 								</h:selectOneMenu>
-								&nbsp;<h:message for="selectRoleID" errorClass="alert-error"></h:message>
+							</div>
+							<div class="controls">
+								<h:message for="selectRoleID" errorClass="alert-error"></h:message>
 							</div>
 						</div>
 						<div class="control-group">
