--- a/WebContent/faces/login/login.xhtml
+++ b/WebContent/faces/login/login.xhtml
@@ -21,10 +21,12 @@
 							<h:commandButton class="btn btn-primary" type="submit" value="Entrar"
 							 action="#{loginController.realizarLogin}" ></h:commandButton>
 						 </div>
+						<hr/>
+						<div>
+							<h:link outcome="novoCadastro" value="Criar conta."></h:link>
+							<h:link styleClass="pull-right" outcome="novoCadastro" value="Esqueceu a senha?"></h:link>
+						</div>
 					</h:form>
-					<br class="clearBoth"/>
-					<hr/>
-					<h:link styleClass="btn" outcome="novoCadastro" value="Cadastro"></h:link>
 				</div>
 			</ui:define>
 		</ui:composition>
