Ajustes nos botões primários.

--- a/WebContent/faces/contato.xhtml
+++ b/WebContent/faces/contato.xhtml
@@ -38,7 +38,7 @@
 								</div>
 								<div class="control-group">
 									<div class="controls">
-										<h:commandButton action="#{contato.enviarMensagem}" styleClass="btn" value="#{contato_props['botao.enviar']}"></h:commandButton>
+										<h:commandButton action="#{contato.enviarMensagem}" styleClass="btn btn-primary" value="#{contato_props['botao.enviar']}"></h:commandButton>
 										&nbsp;
 										<h:button styleClass="btn" value="#{contato_props['botao.cancelar']}"></h:button>
 									</div>
