--- a/WebContent/faces/protected/usuarios.xhtml
+++ b/WebContent/faces/protected/usuarios.xhtml
@@ -15,9 +15,9 @@
 						<thead>
 							<tr>
 								<th>#</th>
-								<th>First Name</th>
-								<th>Last Name</th>
-								<th>Username</th>
+								<th>Nome</th>
+								<th>E-mail</th>
+								<th>Grupo</th>
 							</tr>
 						</thead>
 						<tbody>
