--- a/WebContent/faces/usuarios/cadastro.xhtml
+++ b/WebContent/faces/usuarios/cadastro.xhtml
@@ -68,7 +68,7 @@
 						</div>
 						<div class="control-group">
 							<div class="controls">
-								<h:commandButton value="Cadastrar" styleClass="btn" action="#{usuarioController.cadastrarUsuario}"></h:commandButton>
+								<h:commandButton value="Cadastrar" styleClass="btn btn-primary" action="#{usuarioController.cadastrarUsuario}"></h:commandButton>
 							</div>
 						</div>
 					</h:form>
