Ajustes gerais para a área administrativa (protected).

--- a/WebContent/faces/protected/usuarios.xhtml
+++ b/WebContent/faces/protected/usuarios.xhtml
@@ -10,7 +10,7 @@
 	<f:view>
 		<ui:composition template="/templates/protected/default.xhtml">
 			<ui:define name="content">
-				<div class="container content-top">
+				<div id="usuarios" class="container content-top">
 					<table class="table table-striped">
 						<thead>
 							<tr>
