Exibição do nome de Login/Senha.

--- a/WebContent/faces/login/login.xhtml
+++ b/WebContent/faces/login/login.xhtml
@@ -13,6 +13,7 @@
 				<div class="container content-top">
 					<h:form id="signin" styleClass="form-signin">
 						<h3 class="form-signin-heading">Login</h3>
+						<p>Login/Senha: admin/admin</p>
 						<h:messages warnClass="alert" errorClass="alert-error"></h:messages>
 						<h:inputText id="nome" class="input-block-level" value="#{loginController.login.nome}" required="true" requiredMessage="O nome deve ser preenchido."></h:inputText>
 						<h:inputText id="passwd" class="input-block-level" value="#{loginController.login.senha}" required="true" requiredMessage="A senha deve ser preenchido."></h:inputText>
