Ajustes no link de Esqueceu a senha.

--- a/WebContent/faces/login/login.xhtml
+++ b/WebContent/faces/login/login.xhtml
@@ -25,7 +25,7 @@
 						<hr/>
 						<div>
 							<h:link outcome="novoCadastro" value="Criar conta."></h:link>
-							<h:link styleClass="pull-right" outcome="novoCadastro" value="Esqueceu a senha?"></h:link>
+							<h:link styleClass="pull-right" value="Esqueceu a senha?"></h:link>
 						</div>
 					</h:form>
 				</div>
